--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -35,7 +35,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
       working-directory: ./src/back-end
-    - run: echo "DB=${{secrets.MONGODB_URI}}\nSESSION_SECRET=ARandomlyGeneratedStringOfCharactersToKeepSecret\nHASHKEY=workflowkey" >> .env
+    - run: echo "
+    DB=${{secrets.MONGODB_URI}}
+    SESSION_SECRET=ARandomlyGeneratedStringOfCharactersToKeepSecret
+    HASHKEY=workflowkey" >> .env
       working-directory: ./src/back-end
     - run: node index.js
       working-directory: ./src/back-end
