--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -35,8 +35,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
       working-directory: ./src/back-end
-    - run: echo "
-    DB=${{secrets.MONGODB_URI}}
+    - run: echo "DB=${{secrets.MONGODB_URI}}
     SESSION_SECRET=ARandomlyGeneratedStringOfCharactersToKeepSecret
     HASHKEY=workflowkey" >> .env
       working-directory: ./src/back-end
