Changes way GH variable is called and installs front-end packages

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -35,7 +35,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
       working-directory: ./src/back-end
-    - run: echo "${{secrets.MONGODB_URI}}" >> .env
+    - run: npm install
+      working-directory: ./src/front-end
+    - run: echo ${{ secrets.MONGODB_URI }} >> .env
       working-directory: ./src/back-end
     - run: node index.js
       working-directory: ./src/back-end
