--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -31,6 +31,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
+      env:
+        ENVFILE: ${{ secrets.MONGODB_URI }}
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
