--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -31,13 +31,15 @@ jobs:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
+      env:
+        ENVFILE: ${{ secrets.MONGODB_URI }}
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
       working-directory: ./src/back-end
     - run: npm install
       working-directory: ./src/front-end
-    - run: echo ${{ secrets.MONGODB_URI }} >> .env
+    - run: echo $ENVFILE >> .env
       working-directory: ./src/back-end
     - run: node index.js
       working-directory: ./src/back-end
