Tests what the env variable is being set to

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -37,7 +37,9 @@ jobs:
       working-directory: ./src/back-end
     - run: npm install
       working-directory: ./src/front-end
-    - run: echo "$ENVFILE" >> .env
+    - run: |
+          echo $ENVFILE
+          echo "$ENVFILE" >> .env
       env:
         ENVFILE: ${{ secrets.MONGODB_URI }}
       working-directory: ./src/back-end
