--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -37,16 +37,8 @@ jobs:
       working-directory: ./src/back-end
     - run: npm install
       working-directory: ./src/front-end
-    - run: |
-        export DB
-        export HASHKEY
-        export SESSION_SECRET 
-        node index.js
+    - run: node testingServer.js
       working-directory: ./src/back-end
-      env:
-        DB: ${{ secrets.DB }}
-        HASHKEY: ${{ secrets.HASHKEY }}
-        SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
     - run: npm test --if-present -- localStorage
       working-directory: ./src/front-end
     - name: JEST Report
