server auto closes after tests

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -37,13 +37,8 @@ jobs:
       working-directory: ./src/back-end
     - run: npm install
       working-directory: ./src/front-end
-    - run: node testingServer.js
+    - run: |
+        node testingServer.js
+        cd ../front-end
+        npm run test --if-present -- localStorage
       working-directory: ./src/back-end
-    - run: npm test --if-present -- localStorage
-      working-directory: ./src/front-end
-    - name: JEST Report
-      uses: RedaktionsNetzwerk-Deutschland/action-jest-reporter@v1.0.0
-      with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        json-glob: ./src/unitTests/testOutput.json
-        workdir: ./src/unitTests
