makes server run in the background

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -38,7 +38,7 @@ jobs:
     - run: npm install
       working-directory: ./src/front-end
     - run: |
-        node testingServer.js
+        node testingServer.js &
         cd ../front-end
         npm run test --if-present -- localStorage
       working-directory: ./src/back-end
