--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "@babel/preset-env": "^7.14.4",
     "babel-jest": "^27.0.2",
     "eslint": "^7.26.0",
+    "eslint-plugin-jest": "^26.4.6",
     "jest": "^27.0.4",
     "jest-puppeteer": "^5.0.3",
-    "eslint-plugin-jest": "^26.4.6",
     "jsdoc": "^3.6.10",
-    "puppeteer": "^9.1.1"
+    "puppeteer": "^9.1.1",
+    "supertest": "^6.2.3"
   },
   "jest": {
     "preset": "jest-puppeteer",
